docs/requirements/v3.7.3/REQUIREMENTS.md

Requirements Summary
====================

# default

## As a user, I want a default configuration for harvest included in the tool package ([#37](https://github.com/NASA-PDS/harvest/issues/37)) 


This requirement is not impacted by the current version
## As a user, I want to be able to ingest a directory of data that is not part of a bundle ([#45](https://github.com/NASA-PDS/harvest/issues/45)) 


This requirement is not impacted by the current version
## As a user, I want Harvest automatically convert date / time fields to ISO format supported by Elasticsearch ([#54](https://github.com/NASA-PDS/harvest/issues/54)) 


This requirement is not impacted by the current version
## As a user, I want to ingest the PDS4 label as JSON in a binary blob form ([#60](https://github.com/NASA-PDS/harvest/issues/60)) 


This requirement is not impacted by the current version
## As an ingest user, I want a schema to validate harvest config against ([#61](https://github.com/NASA-PDS/harvest/issues/61)) 


This requirement is not impacted by the current version
## As a user, I want to be able to see a summary of all logs messages after harvest execution completes ([#82](https://github.com/NASA-PDS/harvest/issues/82)) 


This requirement is not impacted by the current version
## As a user, I want to know when the file/label URL is not a URL ([#98](https://github.com/NASA-PDS/harvest/issues/98)) 


This requirement is not impacted by the current version